HackDelft2025/2026:First Commit, changed imports to make it compile

--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -1,5 +1,5 @@
-@import "./src/mixins";
-@import "./src/variables";
+@import "../../mixins";
+@import "../../variables";
 
 .header {
     display: flex;
