--- a/src/components/about/style.scss
+++ b/src/components/about/style.scss
@@ -1,5 +1,5 @@
-@import "./src/mixins";
-@import "./src/variables";
+@import "../../mixins";
+@import "../../variables";
 
 .about {
     margin-bottom: 32px; 
