--- a/src/components/committee/style.scss
+++ b/src/components/committee/style.scss
@@ -1,5 +1,5 @@
-@import "./src/variables";
-@import "./src/mixins";
+@import "../../variables";
+@import "../../mixins";
 
 .committee {
     margin-bottom: 100px;
