--- a/src/components/navigation/style.scss
+++ b/src/components/navigation/style.scss
@@ -1,5 +1,5 @@
-@import "./src/mixins";
-@import "./src/variables";
+@import "../../mixins";
+@import "../../variables";
 
 .navigation {
     border: 5px solid $primary-color;
