--- a/src/components/numbers/style.scss
+++ b/src/components/numbers/style.scss
@@ -1,5 +1,5 @@
-@import "./src/mixins";
-@import "./src/variables";
+@import "../../mixins";
+@import "../../variables";
 
 .numbers {
     margin-bottom: 64px;
