--- a/src/components/timeline/style.scss
+++ b/src/components/timeline/style.scss
@@ -1,5 +1,5 @@
-@import "./src/mixins";
-@import "./src/variables";
+@import "../../mixins";
+@import "../../variables";
 
 .timeline {
     margin-bottom: 32px;
