--- a/src/components/timer/style.scss
+++ b/src/components/timer/style.scss
@@ -1,5 +1,5 @@
-@import "./src/mixins";
-@import "./src/variables";
+@import "../../mixins";
+@import "../../variables";
 
 .timer {
     display: flex;
